--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "github_repo_explorer",
+  "name": "git_repo_explorer",
   "private": true,
   "version": "0.0.0",
   "type": "module",
